<resources>
    <string name="app_name">AgenD</string>
    <string name="DesarrolladaPor">Desarrollada Por:</string>
    <string name="Version">Versión: 1.3</string>
    <string name="Dev_Cuauhtemoc_Nombre">Cuauhtémoc Ramírez Prieto</string>
    <string name="Dev_Cuauhtemoc_Alias">(SoulDragon)</string>
    <string name="Dev_Cuauhtemoc_Frase">Si funciona ya no le muevas</string>
    <string name="Dev_Carlos_Nombre">Carlos Ivan Arreguín Cabrera</string>
    <string name="Dev_Carlos_Alias">(CharlyBenzema)</string>
    <string name="Dev_Carlos_Frase">Interés por aprendizaje acerca del mundo de la tecnología 🫡</string>
    <string name="Dev_Brayan_Nombre">Brayan Corona Gutierrez</string>
    <string name="Dev_Brayan_Alias">(Kawaiski)</string>
    <string name="Dev_Brayan_Frase">Cada fracaso es un paso hacia el éxito.</string>
    <string name="Dev_Kevin_Nombre">Kevin Omar González Martínez</string>
    <string name="Dev_Kevin_Alias">(Kei-O)</string>
    <string name="Dev_Kevin_Frase">La Vida es un Carnaval 🤠🔥</string>
    <string name="Btn_Login">Login</string>
    <string name="Btn_Registro">Registro</string>
    <string name="CrearCuentaTXT">Crear una cuenta</string>
    <string name="NombreEt">Nombres</string>
    <string name="ApellidoEt">Apellidos</string>
    <string name="CorreoEt">Correo electrónico</string>
    <string name="CorreoEtV">Confirmar Correo electrónico</string>
    <string name="ContaseñaEt">Contraseña</string>
    <string name="ConfirmarContraseñaEt">Confirmar contraseña</string>
    <string name="RegistrarUsuario">Registrar</string>
    <string name="TengounacuentaTXT">Tengo una cuenta</string>
    <string name="IniciarSesionTXT">Iniciar sesión</string>
    <string name="CorreoLogin">Correo</string>
    <string name="PassLogin">Contraseña</string>
    <string name="Btn_Logeo">Ingresar</string>
    <string name="NoTienesCuenta">¿No tienes cuenta?</string>
    <string name="UsuarioNuevoTXT">Regístrate</string>
    <string name="OlvidasteContraseña">¿Olvidaste tu contraseña?</string>
    <string name="RecuperarContraseñaTXT">Recuperar contraseña</string>
    <string name="BtnRecuperarContraseña">Recuperar contraseña</string>
    <string name="IngresaCorreoRecuperacion">Ingresa el correo electronico de tu cuenta</string>
    <string name="BienvenidoPrincipal">Bienvenido(a)</string>
    <string name="UidPrincipal"> -- </string>
    <string name="NombresPrincipal"> -- </string>
    <string name="CorreoPrincipal"> -- </string>
    <string name="EstadoCuentaPrincipal">No verificado</string>
    <string name="AgregarNotas">Agregar</string>
    <string name="ListarNotas">Mis Notas</string>
    <string name="Importantes">Importantes</string>
    <string name="Contactos">Contactos</string>
    <string name="AcercaDe">Acerca De</string>
    <string name="CerrarSesion">Salir</string>
    <string name="Uid_Usuario"> Uid del usuario</string>
    <string name="Correo_usuario">Correo de usuario</string>
    <string name="Fecha_hora_actual_TXT">Fecha de registro</string>
    <string name="Fecha_hora_actual">Fecha y hora actual</string>
    <string name="Titulo"> Título </string>
    <string name="Descripcion"> Descripcion</string>
    <string name="Btn_Calendario">Calendario</string>
    <string name="Btn_Hora">Hora</string>
    <string name="Fecha"> 00/00/0000 </string>
    <string name="Hora_Seleccionada"> 00:00 </string>
    <string name="Estado"> No finalizado</string>
    <string name="Agregar_Nota_BD">Guardar</string>
    <string name="Actualizar_Nota_BD">Actualizar</string>
    <string name="Vaciar_Todas_Las_Notas">Vaciar todas las notas</string>
    <string name="Filtrar_Notas">Filtrar notas</string>
    <string name="Perfil_usuario">Perfil del usuario</string>
    <string name="Configuracion">Configuracion</string>
    <string name="Actualizar_pass">Actualizar pass</string>
    <string name="Agregar_contacto">Agregar contacto</string>
    <string name="Vaciar_contactos">Eliminar todos los contactos</string>
    <string name="Buscar_contactos">Buscar contactos</string>
    <string name="Id_nota_Item">Id nota</string>
    <string name="Uid_Usuario_Item"> Uid del usuario</string>
    <string name="Correo_usuario_Item">Correo de usuario</string>
    <string name="Fecha_hora_registro_Item">Fecha y hora registro</string>
    <string name="Titulo_Item"> Título </string>
    <string name="Descripcion_Item"> Descripcion</string>
    <string name="Fecha_Item"> 00/00/0000 </string>
    <string name="Hora_Item"> 00:00 </string>
    <string name="Estado_Item"> No finalizado</string>
    <string name="Id_nota_Item_I">Id nota</string>
    <string name="Uid_Usuario_Item_I"> Uid del usuario</string>
    <string name="Correo_usuario_Item_I">Correo de usuario</string>
    <string name="Fecha_hora_registro_Item_I">Fecha y hora registro</string>
    <string name="Titulo_Item_I"> Título </string>
    <string name="Descripcion_Item_I"> Descripcion</string>
    <string name="Fecha_Item_I"> 00/00/0000 </string>
    <string name="Hora_Item_I"> 00:00 </string>
    <string name="Estado_Item_I"> No finalizado</string>
    <string name="Id_c_Item"> Id contacto</string>
    <string name="Uid_c_Item"> Uid usuario</string>
    <string name="nombres_c_Item">Nombres</string>
    <string name="apellidos_c_Item">Apellidos</string>
    <string name="correo_c_Item">Correo</string>
    <string name="telefono_c_Item">Teléfono</string>
    <string name="edad_c_Item">Edad</string>
    <string name="direccion_c_Item">Dirección</string>
    <string name="ElijaOpcionTXT">Elija una opción</string>
    <string name="CD_Eliminar">Eliminar</string>
    <string name="CD_Actualizar">Actualizar</string>
    <string name="CuentaVerificadaTXT">Cuenta verificada</string>
    <string name="EntendidoVerificado">Entendido</string>
    <string name="EliminarNotaImportanteTXT">¿Desea eliminar ésta nota importante de la lista?</string>
    <string name="EliminarNota">Eliminar</string>
    <string name="EliminarNotaCancelar">Cancelar</string>
    <string name="Establecer_Telefono">Escriba su teléfono</string>
    <string name="Btn_Aceptar_Telefono">Aceptar</string>
    <string name="ElegirImagenTXT">Elegir imagen de:</string>
    <string name="Btn_Elegir_Galeria">Galería</string>
    <string name="Btn_Elegir_Camara">Cámara</string>
    <string name="ValidarTXT">Por favor complete al menos el campo nombre del contacto</string>
    <string name="Btn_Validar_Registro_C">Entendido</string>
    <string name="ElegirOpcionContactoTXT">Seleccione una opción para el contacto</string>
    <string name="Btn_Eliminar_C">Eliminar</string>
    <string name="Btn_Actualizar_C">Actualizar</string>
    <string name="FiltroTXT">Filtrar notas: </string>
    <string name="Todas_notas">Todas</string>
    <string name="Notas_Finalizadas">Finalizadas</string>
    <string name="Notas_No_Finalizadas">No Finalizadas</string>
    <string name="ImportanteTXT_Aut">Lea con atención</string>
    <string name="MensajeTXT_Aut">Para realizar la eliminación de su cuenta, tendrá que cerrar sesión, luego logearse, y en un plazo de 5 minutos podrá eliminar su cuenta de nuestra aplicación, una vez pasado ese tiempo, tendrá que realizar nuevamente los pasos mencionados. </string>
    <string name="Btn_Entendido_Aut">Entendido</string>
    <string name="Btn_Cerrar_Sesion_Aut">Cerrar sesión</string>
    <string name="Id_nota_A">Id nota</string>
    <string name="Uid_Usuario_A"> Uid del usuario</string>
    <string name="Correo_usuario_A">Correo de usuario</string>
    <string name="Fecha_registro_A">Fecha de registro</string>
    <string name="Titulo_A"> Título </string>
    <string name="Descripcion_A"> Descripcion</string>
    <string name="Btn_Calendario_A">Calendario</string>
    <string name="Btn_Hora_A">Hora</string>
    <string name="Fecha_A"> 00/00/0000 </string>
    <string name="Hora_A"> 00:00 </string>
    <string name="Estado_A"> No finalizado</string>
    <string name="Estado_nuevo"> -- </string>
    <string-array name="Estados_nota">
        <item>"No finalizado"</item>
        <item>"Finalizado"</item>
    </string-array>
    <string name="Id_nota_Detalle_TXT">Id de la nota: </string>
    <string name="Id_nota_Detalle">Id nota</string>
    <string name="Uid_usuario_Detalle_TXT">Uid de usuario: </string>
    <string name="Uid_usuario_Detalle">Uid usuario</string>
    <string name="Correo_usuario_Detalle_TXT">Correo de usuario: </string>
    <string name="Correo_usuario_Detalle">Correo usuario</string>
    <string name="Titulo_Detalle_TXT">Título: </string>
    <string name="Titulo_Detalle">Título</string>
    <string name="Descripcion_Detalle_TXT">Descripción: </string>
    <string name="Descripcion_Detalle">Descripcion</string>
    <string name="Fecha_registro_Detalle_TXT">Fecha de registro: </string>
    <string name="Fecha_Registro_Detalle">Fecha registro</string>
    <string name="Fecha_Nota_Detalle_TXT">Fecha nota: </string>
    <string name="Fecha_Nota_Detalle">Fecha nota</string>
    <string name="Hora_Nota_Detalle">Hora nota</string>
    <string name="Estado_Detalle_TXT">Estado de la nota: </string>
    <string name="Estado_Detalle">Estado</string>
    <string name="Boton_Importante">Importante</string>
    <string name="Uid_Perfil">Uid</string>
    <string name="Nombres_Perfil">Mis nombres</string>
    <string name="Apellidos_Perfil">Mis apellidos</string>
    <string name="Correo_Perfil">Correo</string>
    <string name="Edad_Perfil">Edad</string>
    <string name="Telefono_Perfil">Teléfono</string>
    <string name="Domicilio_Perfil">Domicilio</string>
    <string name="Universidad_Perfil">Universidad</string>
    <string name="Profesion_Perfil">Profesión</string>
    <string name="Fecha_Nacimiento_Perfil">Fecha de nacimiento</string>
    <string name="Guardar_Datos">Guardar datos</string>
    <string name="BtnElegirImagenDe">Elegir imagen de</string>
    <string name="BtnActualizarImagen">Actualizar imagen</string>
    <string name="ActualPassTXT">Contraseña actual: </string>
    <string name="ActualPass"> -- </string>
    <string name="EtActualPass">Contraseña actual</string>
    <string name="EtNuevoPass">Nueva contraseña</string>
    <string name="EtRNuevoPass">Repetir nueva contraseña</string>
    <string name="BtnActualizarPass">Actualizar</string>
    <string name="Uid_Usuario_C">Mi uid</string>
    <string name="Nombres_C">Nombres contacto</string>
    <string name="Apellidos_C">Apellidos contacto</string>
    <string name="Correo_C">Correo electrónico</string>
    <string name="Telefono_C">Teléfono</string>
    <string name="Edad_C">Edad</string>
    <string name="Direccion_C">Dirección</string>
    <string name="Btn_Guardar_Contacto">Guardar contacto</string>
    <string name="DetalleContactoTXT">Detalle del contacto</string>
    <string name="Id_C_D"> -- </string>
    <string name="Uid_Usuario_D"> -- </string>
    <string name="Nombre_C_D"> -- </string>
    <string name="Apellidos_C_D"> -- </string>
    <string name="Correo_C_D"> -- </string>
    <string name="Telefono_C_D"> -- </string>
    <string name="Edad_C_D"> -- </string>
    <string name="Direccion_C_D"> -- </string>
    <string name="Llamar_C">Llamar</string>
    <string name="Mensaje_C">Mensaje</string>
    <string name="Id_C_A"> ID Contacto </string>
    <string name="Uid_C_A"> UID Contacto </string>
    <string name="Nombres_C_A"> Nombres Contacto </string>
    <string name="Apellidos_C_A"> Apellidos Contacto </string>
    <string name="Correo_C_A"> Correo Contacto </string>
    <string name="Telefono_C_A"> Telefono Contacto </string>
    <string name="Edad_C_A"> Edad Contacto </string>
    <string name="Direccion_C_A"> Direccion Contacto </string>
    <string name="Btn_Actualizar_C_A">Actualizar</string>
    <string name="Uid_Eliminar">Uid del usuario</string>
    <string name="EliminarCuenta">Eliminar mi cuenta</string>
    <string name="error_api_key">No se ha definido el API en gradle.properties</string>
</resources>