<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">



    <TextView
        android:text="@string/app_name"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_marginBottom="10sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/worksans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:layout_width="400px"
        android:layout_height="400px"
        android:src="@drawable/icono"
        android:layout_gravity="center">
    </ImageView>

    <TextView
        android:text="@string/Version"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/worksans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/DesarrolladaPor"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/worksans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:background="@color/colorPrimary"/>

    <!-- Info Cuauhtemoc-->
    <ImageView
        android:layout_width="400px"
        android:layout_height="400px"
        android:src="@drawable/cuauh_logo_200x200"
        android:layout_gravity="center" />

    <TextView
        android:text="@string/Dev_Cuauhtemoc_Nombre"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/worksans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/Dev_Cuauhtemoc_Alias"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/worksans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/Dev_Cuauhtemoc_Frase"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/worksans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:background="@color/colorPrimary"/>

    <!-- Info Carlos-->

    <ImageView
        android:layout_width="400px"
        android:layout_height="400px"
        android:src="@drawable/charly_logo_200x200"
        android:layout_gravity="center">
    </ImageView>

    <TextView
        android:text="@string/Dev_Carlos_Nombre"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/worksans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/Dev_Carlos_Alias"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/worksans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/Dev_Carlos_Frase"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/worksans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:background="@color/colorPrimary"/>

    <!-- Info Brayan-->
    <ImageView
        android:layout_width="400px"
        android:layout_height="400px"
        android:src="@drawable/brayan_logo_200x200"
        android:layout_gravity="center" />

    <TextView
        android:text="@string/Dev_Brayan_Nombre"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/worksans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/Dev_Brayan_Alias"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/worksans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/Dev_Brayan_Frase"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/worksans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:background="@color/colorPrimary"/>

    <!-- Info Kevin-->
    <ImageView
        android:layout_width="400px"
        android:layout_height="400px"
        android:src="@drawable/kevin_logo_200x200"
        android:layout_gravity="center" />

    <TextView
        android:text="@string/Dev_Kevin_Nombre"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/worksans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/Dev_Kevin_Alias"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/worksans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/Dev_Kevin_Frase"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/worksans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:background="@color/colorPrimary"/>

</androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

