<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".notas.Agregar_Nota"
    android:background="@color/Fondo">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
       android:padding="5dp"
        >

        <!--UID DEL USUARIO-->
        <TextView
            android:id="@+id/Uid_Usuario"
            android:hint="@string/Uid_Usuario"
            android:textSize="18sp"
            android:visibility="gone"
            android:fontFamily="@font/worksans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--CORREO DEL USUARIO-->
        <TextView
            android:id="@+id/Correo_Usuario"
            android:hint="@string/Correo_usuario"
            android:textSize="18sp"
            android:visibility="gone"
            android:fontFamily="@font/worksans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"
           android:background="@color/Primary_700">
           <!--ICONO - TEXTVIEW -->
           <androidx.appcompat.widget.LinearLayoutCompat
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:padding="10dp"
            >

               <androidx.appcompat.widget.AppCompatImageView
                   android:layout_width="30dp"
                   android:layout_height="30dp"
                   android:src="@drawable/fecha_hora_registro"/>

               <TextView
                   android:text="@string/Fecha_hora_actual_TXT"
                   android:textSize="20sp"
                   android:layout_marginStart="10dp"
                   android:fontFamily="@font/worksans"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textStyle="bold"
                   android:textColor="@color/Secondary_100"
                  />

           </androidx.appcompat.widget.LinearLayoutCompat>



           <!--FECHA Y HORA ACTUAL DEL DISPOSITIVO-->
           <TextView
               android:id="@+id/Fecha_hora_actual"
               android:hint="@string/Fecha_hora_actual"
               android:textSize="18sp"
               android:layout_gravity="center"
               android:textStyle="bold"
               android:layout_marginBottom="10dp"
               android:fontFamily="@font/worksans"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/white"/>
       </LinearLayout>

        <!--TITULO-->
        <EditText
            android:id="@+id/Titulo"
            android:hint="@string/Titulo"
            android:textSize="25sp"
            android:textStyle="bold"
            android:fontFamily="@font/worksans"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:layout_height="wrap_content"/>

        <!--DESCRIPCION-->
        <EditText
            android:id="@+id/Descripcion"
            android:hint="@string/Descripcion"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:minHeight="150dp"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <!--BOTON PARA ABRIR CALENDARIO-->
            <Button
                android:id="@+id/Btn_Calendario"
                android:text="@string/Btn_Calendario"
                app:icon="@drawable/icono_calendario"
                android:layout_width="170dp"
                android:layout_height="wrap_content"/>

            <!--VISUALIZAR FECHA ELEGIDA-->
            <TextView
                android:id="@+id/Fecha"
                android:hint="@string/Fecha"
                android:textSize="20sp"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/worksans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <!--BOTON PARA ABRIR TIMEPICKER-->
            <Button
                android:id="@+id/Btn_Hora"
                android:text="@string/Btn_Hora"
                app:icon="@drawable/icono_hora"
                android:layout_width="170dp"
                android:layout_height="wrap_content"/>

            <!--VISUALIZAR HORA ELEGIDA-->
            <TextView
                android:id="@+id/Hora_Seleccionada"
                android:hint="@string/Hora_Seleccionada"
                android:textSize="20sp"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/worksans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


        <!--ESTADO DE LA NOTA-->
        <TextView
            android:id="@+id/Estado"
            android:text="@string/Estado"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/worksans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>